test/compile_errors/err_int_alias_i64_range.w
//! expect-error: integer literal does not fit expected type

fn main:
    let too_big: Int = 9223372036854775808
